Closed Bug 13368 Opened 25 years ago Closed 25 years ago

Diplay of News message missing box displaying which Newsgroup this was sent to

Categories

(MailNews Core :: MIME, defect, P3)

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: esther, Assigned: mscott)

Details

Using builds 19990908 on win98, linux and mac when displaying a News message you
won't see the box displaying the Newsgroup name to which the message was sent.

1. Launch Messenger
2. Click New Msg and select Newsgroup from the addressing drop-down list.
3. Send the message to a newsgroup you are subscribed to (I used netscape.test)
4. Select the message that you just sent and view it in the message pane

Result:  You only see Subject, From and Date, then body of message
Expected: Under the Date I expected to see a box with- Newsgroup: netscape.test
similiar to a mail message which has a box with- To: [recipient's email]
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Target Milestone: M11
Esther, I just looked at doing this and it turns out it is really easy. So I'm
going to check in the fix right now for you. Thanks for pointing this out!
Status: RESOLVED → VERIFIED
Linux (1999-09-15-08 M11)
Win_nt 4.0 (1999-09-15-08 M10)
Mac (1999-09-15-08 M11)
Under the Date, there a  a box for "Newsgroup: netscape.test". Problem has
been fixed.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.