Bug #13368 --> when displaying a newsgroup, be sure to emit the newsgroup name in the to/cc box so we know what newsgroup it came from!