mailnews/mime/emitters/src/nsMimeXULEmitter.cpp
@@ -876,11 +876,12 @@ nsMimeXULEmitter::DumpToCC()
   char * toField = GetHeaderValue(HEADER_TO);
   char * ccField = GetHeaderValue(HEADER_CC);
   char * bccField = GetHeaderValue(HEADER_BCC);
+  char * newsgroupField = GetHeaderValue(HEADER_NEWSGROUPS);
 
   // only dump these fields if we have at least one of them! When displaying news
   // messages that didn't have a to or cc field, we'd always get an empty box
   // which looked weird.
-  if (toField || ccField || bccField)
+  if (toField || ccField || bccField || newsgroupField)
   {
     UtilityWriteCRLF("<toolbar>");
     UtilityWriteCRLF("<box name=\"header-part2\" align=\"vertical\" flex=\"1\">");
@@ -888,6 +889,7 @@ nsMimeXULEmitter::DumpToCC()
     OutputGenericHeader(HEADER_TO);
     OutputGenericHeader(HEADER_CC);
     OutputGenericHeader(HEADER_BCC);
+    OutputGenericHeader(HEADER_NEWSGROUPS);
 
     UtilityWriteCRLF("</box>");
     UtilityWriteCRLF("</toolbar>");
